<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/grade"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bac"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/nice_spinner3"
                    android:layout_width="160dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:text="@string/score"
                    android:textColor="@color/black"
                    app:textTint="@color/blur" />

                <TextView
                    android:id="@+id/infom3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="2019-2020-1"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:width="50dp"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/bac"
                    android:text="@string/submit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/score"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/attribute"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/point"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="0dp"
                    android:text="@string/maxScore"
                    android:textSize="14dp" />
            </LinearLayout>


        </LinearLayout>
        <ListView
            android:id="@+id/grade1"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center">

        </ListView>

    </LinearLayout>


</LinearLayout>
