<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="vertical">


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:background="@drawable/bac"-->
        <!--            android:orientation="horizontal">-->


        <!--        </LinearLayout>-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/bac"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:textColor="@color/blur"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:drawableTop="@drawable/baseline_money_black_36dp"
                android:text="@string/cet"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="75dp"
                android:textColor="@color/blur"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:drawableTop="@drawable/baseline_leaderboard_black_36dp"
                android:text="@string/grade"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blur"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:drawableTop="@drawable/baseline_article_black_18dp"
                android:text="@string/course"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:textColor="@color/blur"
                android:drawableTop="@drawable/baseline_power_settings_new_black_36dp"
                android:text="@string/off"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bac"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/Thursday"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="1px"
                android:background="@color/black" />

            <TextView
                android:id="@+id/NoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:clickable="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/NoCourse"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!--        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            android:background="@drawable/bac"-->
        <!--            android:orientation="vertical">-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/termCourse"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv_con1"
            android:layout_width="wrap_content"
            android:layout_height="480dp"
            android:layout_marginLeft="20dp"></ListView>
    </LinearLayout>
</ScrollView>

